--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,11 @@ buildscript {
         fragment_version = '1.2.5'
         constraint_layout_version = '2.0.4'
         material_version = '1.2.1'
+        coordinator_layout_version = '1.1.0'
+        viewpager2_version = '1.0.0'
         lifecycle_extensions_version = '2.2.0'
         lifecycle_version = '2.2.0'
+        glide_version = '4.11.0'
         timber_version = '4.7.1'
         junit_version = '4.+'
         android_junit_version = '1.1.2'
